# airflow

./: .pre-commit-config.yaml  RELEASE_NOTES.rst  hatch_build.py  pyproject.toml
core/: pyproject.toml
core/src/airflow/: git_version
core/src/airflow/executors/: null_executor.py
core/src/airflow/migrations/versions/: f214b8cdd732_add_uuid_pk_to_ti.py
core/src/airflow/models/: dag.py
providers/: pyproject.toml
providers/tests/system/airbyte/: example_airbyte_trigger_job.py
providers/tests/system/alibaba/: example_adb_spark_batch.py  example_adb_spark_sql.py  example_oss_bucket.py  example_oss_object.py
providers/tests/system/amazon/aws/: example_appflow.py  example_appflow_run.py  example_athena.py  example_azure_blob_to_s3.py  example_batch.py  example_bedrock.py  example_bedrock_retrieve_and_generate.py  example_cloudformation.py  example_comprehend.py  example_comprehend_document_classifier.py  example_datasync.py  example_dms.py  example_dynamodb.py  example_dynamodb_to_s3.py  example_ec2.py  example_ecs.py  example_ecs_fargate.py  example_eks_templated.py  example_eks_with_fargate_in_one_step.py  example_eks_with_fargate_profile.py  example_eks_with_nodegroup_in_one_step.py  example_eks_with_nodegroups.py  example_emr.py  example_emr_eks.py  example_emr_notebook_execution.py  example_emr_serverless.py  example_eventbridge.py  example_ftp_to_s3.py  example_gcs_to_s3.py  example_glacier_to_gcs.py  example_glue.py  example_glue_data_quality.py  example_glue_data_quality_with_recommendation.py  example_glue_databrew.py  example_google_api_sheets_to_s3.py  example_google_api_youtube_to_s3.py  example_hive_to_dynamodb.py  example_http_to_s3.py  example_imap_attachment_to_s3.py  example_kinesis_analytics.py  (+26 more)
providers/tests/system/apache/beam/: example_beam.py  example_beam_java_flink.py  example_beam_java_spark.py  example_go.py  example_go_dataflow.py  example_java_dataflow.py  example_python.py  example_python_async.py  example_python_dataflow.py
providers/tests/system/apache/cassandra/: example_cassandra_dag.py
providers/tests/system/apache/drill/: example_drill_dag.py
providers/tests/system/apache/druid/: example_druid_dag.py
providers/tests/system/apache/hive/: example_twitter_dag.py
providers/tests/system/apache/iceberg/: example_iceberg.py
providers/tests/system/apache/kafka/: example_dag_event_listener.py  example_dag_hello_kafka.py
providers/tests/system/apache/kylin/: example_kylin_dag.py
providers/tests/system/apache/livy/: example_livy.py
providers/tests/system/apache/pig/: example_pig.py
providers/tests/system/apache/pinot/: example_pinot_dag.py
providers/tests/system/asana/: example_asana.py
providers/tests/system/cohere/: example_cohere_embedding_operator.py
providers/tests/system/databricks/: example_databricks.py  example_databricks_repos.py  example_databricks_sensors.py  example_databricks_sql.py  example_databricks_workflow.py
providers/tests/system/dingding/: example_dingding.py
providers/tests/system/docker/: example_docker.py  example_docker_copy_data.py  example_docker_swarm.py
providers/tests/system/elasticsearch/: example_elasticsearch_query.py
providers/tests/system/ftp/: example_ftp.py
providers/tests/system/github/: example_github.py
providers/tests/system/http/: example_http.py
providers/tests/system/influxdb/: example_influxdb.py  example_influxdb_query.py
providers/tests/system/jdbc/: example_jdbc_queries.py
providers/tests/system/jenkins/: example_jenkins_job_trigger.py
providers/tests/system/mysql/: example_mysql.py
providers/tests/system/neo4j/: example_neo4j.py
providers/tests/system/openai/: example_openai.py  example_trigger_batch_operator.py
providers/tests/system/opensearch/: example_opensearch.py
providers/tests/system/opsgenie/: example_opsgenie_alert.py  example_opsgenie_notifier.py
providers/tests/system/papermill/: example_papermill.py  example_papermill_remote_verify.py  example_papermill_verify.py
providers/tests/system/pgvector/: example_pgvector.py  example_pgvector_openai.py
providers/tests/system/pinecone/: example_create_pod_index.py  example_create_serverless_index.py  example_dag_pinecone.py  example_pinecone_cohere.py  example_pinecone_openai.py
providers/tests/system/postgres/: example_postgres.py
providers/tests/system/presto/: example_gcs_to_presto.py
providers/tests/system/qdrant/: example_dag_qdrant.py
providers/tests/system/redis/: example_redis_publish.py
providers/tests/system/salesforce/: example_bulk.py  example_salesforce_apex_rest.py
providers/tests/system/samba/: example_gcs_to_samba.py
providers/tests/system/sftp/: example_sftp_sensor.py
providers/tests/system/singularity/: example_singularity.py
providers/tests/system/slack/: example_slack.py  example_slack_webhook.py  example_sql_to_slack.py  example_sql_to_slack_webhook.py
providers/tests/system/snowflake/: example_copy_into_snowflake.py  example_snowflake.py  example_snowpark_decorator.py  example_snowpark_operator.py
providers/tests/system/sqlite/: example_sqlite.py
providers/tests/system/tableau/: example_tableau.py
providers/tests/system/telegram/: example_telegram.py
providers/tests/system/teradata/: example_azure_blob_to_teradata_transfer.py  example_s3_to_teradata_transfer.py  example_ssl_teradata.py  example_teradata.py  example_teradata_call_sp.py  example_teradata_compute_cluster.py  example_teradata_to_teradata_transfer.py
providers/tests/system/trino/: example_gcs_to_trino.py  example_trino.py
providers/tests/system/weaviate/: example_weaviate_cohere.py  example_weaviate_dynamic_mapping_dag.py  example_weaviate_openai.py  example_weaviate_operator.py  example_weaviate_using_hook.py  example_weaviate_vectorizer_dag.py  example_weaviate_without_vectorizer_dag.py
providers/tests/system/yandex/: example_yandexcloud.py  example_yandexcloud_dataproc.py  example_yandexcloud_dataproc_lightweight.py  example_yandexcloud_yq.py
providers/tests/system/ydb/: example_ydb.py
providers/tests/system/zendesk/: example_zendesk_custom_get.py
(+251 files in other folders)
